# schema4apps

./: .release-please-manifest.json  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  publish-release.yml  release-please.yml
.sqa/: config.yml  docker-compose.yml
ai4metav/: main.py
instances/: sample-v2.mods.json
src/ai4_metadata/: __init__.py  main.py  migrate.py  utils.py  validate.py
src/ai4_metadata/tests/: test_validator.py
src/ai4metav/: main.py
src/ai4metav/schemata/: ai4-apps-v2.0.0.json  ai4-apps-v2.json
