[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai4-metadata-validator"
version = "1.0.0"
description = "AI4OS Hub applications metadata validator"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Pablo Orviz", email = "orviz@ifca.unican.es" },
    { name = "Álvaro López García", email = "aloga@ifca.unican.es" },
]
dependencies = [
    "jsonschema>=3.0.0b3",
    "rfc3987>=1.3.8",
    "simplejson>=3.16.0",
]

[tool.setuptools.packages.find]
where = ["src/"]

[project.scripts]
ai4-metadata-validator = "ai4metav.main:validate"

[project.urls]
Homepage = "https://github.com/ai4os/ai4-metadata-validator"

# Include schematas in the package
[tool.setuptools.package-data]
ai4metav = ["schemata/*.json"]
